# my-bt-printers

./: .gitignore  README.md  pyproject.toml
docs/devices/: DL-T01.md  MX10.md  Peripage.md
script/: dlt01_calibration_pattern.py  inspect_gatt.py
src/bt_printers/: __init__.py  base.py  ble.py  calibration.py  cli.py  preparation.py  printing.py  profiles.py  render.py
src/bt_printers/devices/: __init__.py  dlt01.py  dlt01_protocol.py  mx10.py  mx10_protocol.py  peripage.py  peripage_protocol.py
tests/: test_protocols.py
