[project]
name = "my-bt-printers"
version = "0.1.0"
description = "Python BLE printing tools for small thermal Bluetooth printers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "bleak>=3.0,<4.0",
  "pillow>=10.0,<13.0",
]

[project.scripts]
bt-printer = "bt_printers.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bt_printers"]
